@@ -1,65 +1,68 @@
 pipeline {
-  agent any
-  tools { 
+    agent any
+    tools { 
         maven 'Maven_3_8_4'  
     }
-   stages{
-    stage('CompileandRunSonarAnalysis') {
+    environment {
+        MAVEN_OPTS = "-Xmx2048m -XX:MaxPermSize=512m"
+    }
+    stages {
+        stage('CompileandRunSonarAnalysis') {
             steps {	
-		sh 'mvn clean verify sonar:sonar -Dsonar.projectKey=mmbuggywebapp -Dsonar.organization=mmbuggywebapp -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=363744f02b4367747d67f3029802dd91b5f4c343'
-			}
-    }
-
-	stage('RunSCAAnalysisUsingSnyk') {
-            steps {		
-				withCredentials([string(credentialsId: 'SNYK_TOKEN', variable: 'SNYK_TOKEN')]) {
-					sh 'mvn snyk:test -fn'
-				}
-			}
-    }
-
-	stage('Build') { 
-            steps { 
-               withDockerRegistry([credentialsId: "dockerlogin", url: ""]) {
-                 script{
-                 app =  docker.build("mid")
-                 }
-               }
+                sh 'mvn clean verify sonar:sonar -Dsonar.projectKey=mmbuggywebapp -Dsonar.organization=mmbuggywebapp -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=363744f02b4367747d67f3029802dd91b5f4c343'
             }
-    }
+        }
 
-	stage('Push') {
-            steps {
-                script{
-                    docker.withRegistry('https://787939039510.dkr.ecr.us-west-2.amazonaws.com', 'ecr:us-west-2:aws-credentials') {
-                    app.push("latest")
+        stage('RunSCAAnalysisUsingSnyk') {
+            steps {		
+                withCredentials([string(credentialsId: 'SNYK_TOKEN', variable: 'SNYK_TOKEN')]) {
+                    sh 'mvn snyk:test -fn'
+                }
+            }
+        }
+
+        stage('Build') { 
+            steps { 
+                withDockerRegistry([credentialsId: "dockerlogin", url: ""]) {
+                    script {
+                        app = docker.build("mid")
                     }
                 }
             }
-    	}
-	   
-	stage('Kubernetes Deployment of MID Bugg Web Application') {
-	   steps {
-	      withKubeConfig([credentialsId: 'kubelogin']) {
-		  sh('kubectl delete all --all -n devsecops')
-		  sh ('kubectl apply -f deployment.yaml --namespace=devsecops')
-		}
-	      }
-   	}
-	   
-	stage ('wait_for_testing'){
-	   steps {
-		   sh 'pwd; sleep 180; echo "Application Has been deployed on K8S"'
-	   	}
-	   }
-	   
-	stage('RunDASTUsingZAP') {
-          steps {
-		    withKubeConfig([credentialsId: 'kubelogin']) {
-				sh('zap.sh -cmd -quickurl http://$(kubectl get services/midbuggy --namespace=devsecops -o json| jq -r ".status.loadBalancer.ingress[] | .hostname") -quickprogress -quickout ${WORKSPACE}/zap_report.html')
-				archiveArtifacts artifacts: 'zap_report.html'
-		    }
-	     }
-       } 
-  }
+        }
+
+        stage('Push') {
+            steps {
+                script {
+                    docker.withRegistry('https://787939039510.dkr.ecr.us-west-2.amazonaws.com', 'ecr:us-west-2:aws-credentials') {
+                        app.push("latest")
+                    }
+                }
+            }
+        }
+        
+        stage('Kubernetes Deployment of MID Bugg Web Application') {
+            steps {
+                withKubeConfig([credentialsId: 'kubelogin']) {
+                    sh 'kubectl delete all --all -n devsecops || true'
+                    sh 'kubectl apply -f deployment.yaml --namespace=devsecops'
+                }
+            }
+        }
+        
+        stage('wait_for_testing') {
+            steps {
+                sh 'pwd; sleep 180; echo "Application Has been deployed on K8S"'
+            }
+        }
+        
+        stage('RunDASTUsingZAP') {
+            steps {
+                withKubeConfig([credentialsId: 'kubelogin']) {
+                    sh 'zap.sh -cmd -quickurl http://$(kubectl get services/midbuggy --namespace=devsecops -o json| jq -r ".status.loadBalancer.ingress[] | .hostname") -quickprogress -quickout ${WORKSPACE}/zap_report.html'
+                    archiveArtifacts artifacts: 'zap_report.html'
+                }
+            }
+        }
+    }
 }
